--- a/README.Rmd
+++ b/README.Rmd
@@ -46,7 +46,7 @@ This package is based on the R\ package **[unikn](https://CRAN.R-project.org/pac
 
 You can install the development version of **unicol** from [GitHub](https://github.com/) with:
 
-``` r
+```{r install-from-github, eval = FALSE}
 # install.packages("devtools")
 devtools::install_github("hneth/unicol")
 ```
@@ -73,11 +73,16 @@ all_unicol_pals <- list(caltech_pal_1, caltech_pal_2, caltech_pal_3,
                         hu_pal_1, hu_pal_2,
                         lmu_pal_1, lmu_pal_2, lmu_pal_3,
                         mit_pal,
-                        mpg_pal 
+                        mpg_pal,
+                        nyu_1, nyu_2, nyu_accent, nyu_neutral,
+                        rpi_pal_1, rpi_pal_2, rpi_pal_3,
                         # etc.
+                        uni_stanford_1, # uni_stanford_accent, 
+                        uni_stanford_web
                         )
 
 
+# Statistics:
 n_pals <- length(all_unicol_pals)
 ```
 
@@ -99,7 +104,7 @@ Here are some examples how the color palettes from **unicol** can be used:
 ```{r examples, message = FALSE}
 seecol(uni_yale_primary, main = "Primary colors of Yale University")
 demopal(uni_berkeley_primary_1, type = 2, main = "Using the colors of Uni Berkeley")
-demopal(nyu_primary_1, type = 3, main = "NYU colors")
+demopal(nyu_1, type = 3, main = "NYU colors")
 ```
 
 
