--- a/README.Rmd
+++ b/README.Rmd
@@ -69,7 +69,7 @@ library(unikn)   # for color functions
 # ToDo: Get from palette registry data: ----
 
 # Create a list of all unicol color palettes:
-all_unicol_pals <- list(caltech_pal_1, caltech_pal_2, caltech_pal_3,
+all_unicol_pals <- list(caltech_1, caltech_2, caltech_3,
                         eth_pal_1, eth_pal_2, eth_pal_3, 
                         fu_pal_1, fu_pal_2, fu_pal_3,
                         hu_pal_1, hu_pal_2,
@@ -79,8 +79,8 @@ all_unicol_pals <- list(caltech_pal_1, caltech_pal_2, caltech_pal_3,
                         nyu_1, nyu_2, nyu_accent, nyu_neutral,
                         rpi_pal_1, rpi_pal_2, rpi_pal_3,
                         # etc.
-                        uni_stanford_1, # uni_stanford_accent, 
-                        uni_stanford_web
+                        stanford_1, # stanford_2_accent, 
+                        stanford_3_web
                         )
 
 all_cols <- unlist(all_unicol_pals)
@@ -100,7 +100,7 @@ all_cols <- unlist(all_unicol_pals)
 # lapply(all_unicol_pals, get_name)
 
 # Manually:
-all_unicol_pal_names <- c("caltech_pal_1", "caltech_pal_2", "caltech_pal_3",
+all_unicol_pal_names <- c("caltech_1", "caltech_2", "caltech_3",
                           "eth_pal_1", "eth_pal_2", "eth_pal_3", 
                           "fu_pal_1", "fu_pal_2", "fu_pal_3",
                           "hu_pal_1", "hu_pal_2",
@@ -110,8 +110,8 @@ all_unicol_pal_names <- c("caltech_pal_1", "caltech_pal_2", "caltech_pal_3",
                           "nyu_1", "nyu_2", "nyu_accent", "nyu_neutral",
                           "rpi_pal_1", "rpi_pal_2", "rpi_pal_3",
                           # etc.
-                          "uni_stanford_1", # "uni_stanford_accent", 
-                          "uni_stanford_web"
+                          "stanford_1", # "stanford_2_accent", 
+                          "stanford_3_web"
 )
 
 
@@ -141,9 +141,9 @@ seecol(all_unicol_pals,
 Here are some examples how the color palettes from **unicol** can be used:
 
 ```{r examples, message = FALSE}
-seecol(uni_yale_primary, main = "Primary colors of Yale University")
-demopal(uni_berkeley_primary_1, type = 2, main = "Using the colors of Uni Berkeley")
-demopal(nyu_1, type = 3, main = "NYU colors")
+seecol(yale_1, main = "Primary colors of Yale University")
+demopal(uni_berkeley_1, type = 2, main = "Using the colors of Berkeley University")
+demopal(nyu_1, type = 3, main = "Using NYU colors")
 ```
 
 
