--- a/README.Rmd
+++ b/README.Rmd
@@ -14,7 +14,7 @@ knitr::opts_chunk$set(
 )
 ```
 
-# unicol
+# unicol `r getNamespaceVersion("unicol")` 
 
 <!-- badges: start -->
 <!-- badges: end -->
@@ -69,7 +69,8 @@ library(unikn)   # for color functions
 # ToDo: Get from palette registry data: ----
 
 # Create a list of all unicol color palettes:
-all_unicol_pals <- list(caltech_1, caltech_2, caltech_3,
+all_unicol_pals <- list(berkeley_1, berkeley_2, 
+                        caltech_1, caltech_2, caltech_3,
                         eth_pal_1, eth_pal_2, eth_pal_3, 
                         fu_pal_1, fu_pal_2, fu_pal_3,
                         hu_pal_1, hu_pal_2,
@@ -100,7 +101,8 @@ all_cols <- unlist(all_unicol_pals)
 # lapply(all_unicol_pals, get_name)
 
 # Manually:
-all_unicol_pal_names <- c("caltech_1", "caltech_2", "caltech_3",
+all_unicol_pal_names <- c("berkeley_1", "berkeley_2", 
+                          "caltech_1", "caltech_2", "caltech_3",
                           "eth_pal_1", "eth_pal_2", "eth_pal_3", 
                           "fu_pal_1", "fu_pal_2", "fu_pal_3",
                           "hu_pal_1", "hu_pal_2",
@@ -142,7 +144,7 @@ Here are some examples how the color palettes from **unicol** can be used:
 
 ```{r examples, message = FALSE}
 seecol(yale_1, main = "Primary colors of Yale University")
-demopal(uni_berkeley_1, type = 2, main = "Using the colors of Berkeley University")
+demopal(berkeley_1, type = 2, main = "Using the colors of Berkeley University")
 demopal(nyu_1, type = 3, main = "Using NYU colors")
 ```
 
