--- a/README.Rmd
+++ b/README.Rmd
@@ -12,14 +12,32 @@ knitr::opts_chunk$set(
   fig.align = "center", 
   out.width = "600px"
 )
+
+# URLs: ------ 
+
+# unikn:
+url_unikn <- "https://www.uni-konstanz.de/"
+
+url_unikn_cran   <- "https://CRAN.R-project.org/package=unikn"
+url_unikn_github <- "https://github.com/hneth/unikn"
+
+# unicol: 
+url_unicol_cran   <- "" # "https://CRAN.R-project.org/package=unicol"
+url_unicol_github <- "https://github.com/hneth/unicol"
 ```
 
 # unicol `r getNamespaceVersion("unicol")` 
 
 
+
 <!-- badges: start -->
 <!-- badges: end -->
 
+
+<!-- unikn pkg logo and link: -->
+<a href = "`r url_unikn_cran`">
+<img src = "./inst/pix/pkg_unikn.png" alt = "unikn::" align = "right" width = "140px" style = "width: 140px; float: right; border:0;"/>
+</a>
 
 The colors of your university.
 
@@ -150,6 +168,23 @@ seecol(yale_1, main = "The primary colors of Yale University")
 demopal(berkeley_1, type = 2, main = "The colors of Berkeley, University of California", seed = 3)
 demopal(nyu_1, type = 3, main = "Using NYU colors")
 ```
+
+
+## Vignettes
+
+<!-- unikn pkg logo and link: -->
+<a href = "`r url_unikn_cran`">
+<img src = "./inst/pix/pkg_unikn.png" alt = "unikn::" align = "right" width = "140px" style = "width: 140px; float: right; border:0;"/>
+</a>
+
+The following vignettes provide an overview of and examples for using the **unicol** color palettes: 
+
+<!-- Table of vignettes: -->
+
+| Nr.  | Vignette | Content    |        
+| ---: |:---------|:-----------|
+| 1. | [Color palettes](./vignettes/color_pals.html) | The color palettes of the **unicol** R package |
+| 2. | [Using color palettes](./vignettes/using_pals.html) | Recipes for using the **unicol** color palettes |
 
 
 ------
