--- a/README.Rmd
+++ b/README.Rmd
@@ -183,8 +183,8 @@ The following vignettes provide an overview of and examples for using the **unic
 
 | Nr.  | Vignette | Content    |        
 | ---: |:---------|:-----------|
-| 1. | [Color palettes](./vignettes/color_pals.html) | The color palettes of the **unicol** R package |
-| 2. | [Using color palettes](./vignettes/using_pals.html) | Recipes for using the **unicol** color palettes |
+| 1. | [Color palettes](/vignettes/color_pals.html) | The color palettes of the **unicol** R package |
+| 2. | [Using color palettes](/vignettes/using_pals.html) | Recipes for using the **unicol** color palettes |
 
 
 ------
