--- a/vignettes/color_pals.Rmd
+++ b/vignettes/color_pals.Rmd
@@ -57,24 +57,73 @@ url_unicol_github <- "https://github.com/hneth/unicol"
 This vignettes provides an overview of the **color palettes** included in the **unicol** package. 
 (See the vignette on [Using color palettes](using_pals.html) for how to use the **unicol** color palettes.) 
 
-<!-- +++ here now +++  -->
-
-
-
-<!-- Mention the **unicol** package here! -->
-
-This vignette first shows which color palettes from other institutions are currently provided by the **unikn** package. 
-As these will never be complete, it then explains how the color-related tools of **unikn** can be used for **creating new color palettes**. 
-<!-- Main color info: --> 
-(For a general introduction to the package's colors, color palettes, and color functions, see the vignettes on [Colors and color functions](colors.html) and [Color recipes](color_recipes.html). 
-The vignette on [Text boxes and decorations](text.html) provides information on plotting slides and text elements.) 
-
-We install or load the **unikn** package to get started: 
+We install or load the **unicol** package to get started: 
 
 ```{r load-unicol-pkg, message = FALSE, warning = FALSE}
 # install.packages('unicol')  # install unicol from CRAN client
 library('unicol')             # load the package
 ```
+
+
+## Overview
+
+The **unicol** package currently contains **`r length(unique(unicol_data$pal))`\ color palettes** from **`r length(unique(unicol_data$inst))`\ institutions**. 
+
+```{r unicol-pals-example, echo = FALSE, eval = TRUE}
+# Parameters:
+N <- length(unicol_data$pal)
+n <- 50
+
+# Sample:
+set.seed(2)
+sample_n <- sort(sample(x = 1:N, size = n, replace = FALSE))
+
+# Get sample of my_pals from unicol_data:
+my_pals <- unicol_data$pal[sample_n]
+
+# Initialize data structures:
+pal_list  <- vector(mode = "list", length = n)
+pal_names <- vector(mode = "character", length = n)
+
+# Loop: iterate through palettes:
+for (i in 1:n){
+  
+  cur_name <- my_pals[i]
+  cur_pal <- get(cur_name)
+  
+  pal_list[[i]]  <- cur_pal
+  pal_names[i] <- cur_name
+  
+} # for i loop end.
+
+# Check:
+# pal_list
+# pal_names
+```
+
+As a table:
+
+```{r unicol-pals-table, echo = FALSE}
+my_caption <- paste0("A sample of ", n, " unicol palettes.")
+
+knitr::kable(unicol_data[sample_n, ], caption = my_caption)
+```
+
+Figure\ 1 illustrates `r n` random color palettes: 
+
+```{r unicol-pals-figure, echo = FALSE, eval = TRUE, fig.width = 7.2, out.width = "600px", fig.asp = 2.0, fig.cap = "A set of color palettes in the unicol package."}
+# Figure:
+my_title <- paste0("A sample of ", n, " unicol palettes")
+
+# show palettes:
+unikn::seecol(pal = pal_list,
+              pal_names = pal_names,         
+              main = my_title)
+```
+
+
+
+<!-- +++ here now +++  -->
 
 
 ## Current color palettes
