--- a/README.Rmd
+++ b/README.Rmd
@@ -84,82 +84,116 @@ library(unikn)   # for color functions
 
 ## Contents
 
-<!-- A list of all unicol palettes: -->
-
-```{r list-all-pals, echo = FALSE}
-# ToDo: Get from palette registry data: ----
-
-# Create a list of all unicol color palettes:
-all_unicol_pals <- list(berkeley_1, berkeley_2, 
-                        caltech_1, caltech_2, caltech_3,
-                        eth_pal_1, eth_pal_2, eth_pal_3, 
-                        fu_pal_1, fu_pal_2, fu_pal_3,
-                        hu_pal_1, hu_pal_2,
-                        lmu_pal_1, lmu_pal_2, lmu_pal_3,
-                        mit_pal,
-                        mpg_pal,
-                        nyu_1, nyu_2, nyu_accent, nyu_neutral,
-                        rpi_pal_1, rpi_pal_2, rpi_pal_3,
-                        # etc.
-                        stanford_1, # stanford_2_accent, 
-                        stanford_3_web
-                        )
-
-all_cols <- unlist(all_unicol_pals)
-
-# Can we get all palette names (as a character vector)?
-
-# names(all_unicol_pals) # does not work
-
-# deparse(substitute()) # gets an object's name
-# 
-# get_name <- function(x){
-#  
-#  deparse(substitute(x))
-#  
-# }
-#
-# lapply(all_unicol_pals, get_name)
-
-# Manually:
-all_unicol_pal_names <- c("berkeley_1", "berkeley_2", 
-                          "caltech_1", "caltech_2", "caltech_3",
-                          "eth_pal_1", "eth_pal_2", "eth_pal_3", 
-                          "fu_pal_1", "fu_pal_2", "fu_pal_3",
-                          "hu_pal_1", "hu_pal_2",
-                          "lmu_pal_1", "lmu_pal_2", "lmu_pal_3",
-                          "mit_pal",
-                          "mpg_pal",
-                          "nyu_1", "nyu_2", "nyu_accent", "nyu_neutral",
-                          "rpi_pal_1", "rpi_pal_2", "rpi_pal_3",
-                          # etc.
-                          "stanford_1", # "stanford_2_accent", 
-                          "stanford_3_web"
-)
-
-
-# Check:
-# length(all_unicol_pals) == length(all_unicol_pal_names)
-
-# Statistics: ---- 
-n_pals <- length(all_unicol_pals)
-n_cols <- length(all_cols)
+```{r unicol-stats, echo = FALSE}
+n_pals <- length(unique(unicol_data$pal))
+n_inst <- length(unique(unicol_data$inst))
 ```
 
+The **unicol** package currently provides **`r n_pals`\ color palettes** from **`r n_inst`\ institutions**. 
 
-The **unicol** package currently contains `r n_pals`\ color palettes (with a total of `r n_cols`\ colors) from Z\ institutions. 
+<!-- **Table\ 1** provides an overview of all color palettes:  -->
 
+```{r unicol-pals-table-all, echo = FALSE, eval = FALSE}
+# Data:
+all_pals_df <- unicol_data
+names(all_pals_df) <- c("Institution", "(aka.)", "URL", "Palette name")
 
-An overview of the current color palettes provided by the **unicol** package:
+tab_caption <- paste0("Overview of ", n_pals, " unicol palettes (from ", n_inst, " institutions).")
 
-```{r show-contents, echo = FALSE, fig.asp = 1}
-seecol(all_unicol_pals, 
-       pal_names = all_unicol_pal_names, 
-       main = "The unicol color palettes")
+# Print table:
+knitr::kable(all_pals_df, caption = tab_caption, row.names = TRUE)
 ```
+
+(See the vignette on **Color palettes** for an overview of all colors and institutions.)
+
+<!-- +++ here now +++  -->
 
 
 ## Examples 
+
+<!-- Goal: Show some color palettes and how they can be used: -->
+
+
+### Color palettes
+
+<!-- The **unicol** package currently contains **`r n_pals`\ color palettes** from **`r n_inst`\ institutions**.  -->
+
+<!-- Example 1: Random pals (from vignette color_pals.Rmd): -->
+
+```{r unicol-pals-example-1-parameters, echo = FALSE, eval = TRUE}
+# Parameters:
+N <- length(unicol_data$pal)
+n <- 50 # N
+```
+
+```{r unicol-pals-example-1-lists, echo = FALSE, eval = TRUE}
+# Parameters:
+N <- length(unicol_data$pal)
+n <- 50 # N
+
+# Sample:
+set.seed(123)
+sample_n <- sort(sample(x = 1:N, size = n, replace = FALSE))
+
+# Get sample of my_pals from unicol_data:
+my_pals <- unicol_data$pal[sample_n]
+
+# Initialize data structures:
+pal_list  <- vector(mode = "list", length = n)
+pal_names <- vector(mode = "character", length = n)
+col_count <- 0
+
+# Loop: Iterate through n palettes:
+for (i in 1:n){
+  
+  cur_name  <- my_pals[i]
+  cur_pal   <- get(cur_name)
+  cur_count <- length(cur_pal)
+    
+  pal_list[[i]] <- cur_pal
+  pal_names[i]  <- cur_name
+  col_count     <- col_count + cur_count
+    
+} # for i loop end.
+
+# Check:
+# pal_list
+# pal_names
+
+# Captions:
+tab_caption <- paste0("A sample of ", n, " unicol palettes (containing ", col_count, " colors).")
+fig_caption <- paste0("Figure 1: A sample of ", n, " unicol palettes (containing ", col_count, " colors).")
+my_main     <- paste0("Illustrating ", n, " unicol palettes (with ", col_count, " colors).")
+```
+
+```{r unicol-pals-example-1-stats, echo = FALSE, eval = FALSE}
+# Stats (for n <- N):
+n_pals  # number of color palettes: 202 on 2023-04-08. 
+n_inst  # number of institutions: 86 on 2023-08-03.
+# Colors:
+length(unlist(pal_list))          # number of colors: 1327 on 2023-04-08. 
+length(unique(unlist(pal_list)))  # number of unique colors: 1130 on 2023-04-08. 
+```
+
+<!-- As a table: -->
+
+```{r unicol-pals-example-1-table, echo = FALSE, eval = FALSE}
+# knitr::kable(unicol_data[sample_n, ], caption = tab_caption)
+```
+
+<!-- As a figure: -->
+
+**Figure\ 1** illustrates `r n` random color palettes (with `r col_count`\ colors): 
+
+```{r unicol-pals-example-1-figure, echo = FALSE, eval = TRUE, fig.width = 7, out.width = "80%", fig.align = 'center', fig.asp = 1.2, fig.cap = fig_caption}
+# Figure: Illustrate color palettes:
+unikn::seecol(pal = pal_list,
+              pal_names = pal_names,         
+              main = my_main)
+```
+
+
+### Using palettes
 
 Here are some examples how the color palettes from **unicol** can be used:
 
