--- a/vignettes/color_pals.Rmd
+++ b/vignettes/color_pals.Rmd
@@ -94,16 +94,16 @@ pal_list  <- vector(mode = "list", length = n)
 pal_names <- vector(mode = "character", length = n)
 col_count <- 0
 
-# Loop: iterate through palettes:
+# Loop: Iterate through n palettes:
 for (i in 1:n){
   
-  cur_name <- my_pals[i]
-  cur_pal <- get(cur_name)
+  cur_name  <- my_pals[i]
+  cur_pal   <- get(cur_name)
   cur_count <- length(cur_pal)
     
-  pal_list[[i]]  <- cur_pal
-  pal_names[i] <- cur_name
-  col_count <- col_count + cur_count
+  pal_list[[i]] <- cur_pal
+  pal_names[i]  <- cur_name
+  col_count     <- col_count + cur_count
     
 } # for i loop end.
 
@@ -132,6 +132,8 @@ length(unique(unlist(pal_list)))  # number of unique colors: 1130 on 2023-04-08.
 ```{r unicol-pals-table-sample, echo = FALSE, eval = FALSE}
 # knitr::kable(unicol_data[sample_n, ], caption = tab_caption)
 ```
+
+<!-- As a figure: -->
 
 **Figure\ 1** illustrates `r n` random color palettes: 
 
